# MyLib

./: AmirhoseinFarahmandLibrary.drawio  CMakeLists.txt  LICENSE  README.md
Assets/: data.json
include/: common.h  config.h  dbmanager.h  user.h  usermanager.h
include2/: book.h  library.h  randomGenerator.h
src/: dbmanager.cpp  main.cpp  user.cpp  usermanager.cpp
src2/: book.cpp  library.cpp  randomGenerator.cpp
ui/: LoginPage.qml  MainMenu.qml  RegisterPage.qml  Search.qml  main.qml  qml.qrc
ui/Component/: HiInputText.qml  MessageBox.qml
